--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   badges: ^2.0.3
   carousel_slider: ^4.1.1
   cupertino_icons: ^1.0.2
+  dotted_border: ^2.0.0+3
   flutter:
     sdk: flutter
   http: ^0.13.5
