add product && product screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,10 @@ environment:
 dependencies:
   badges: ^2.0.3
   carousel_slider: ^4.1.1
+  cloudinary_public: ^0.20.0
   cupertino_icons: ^1.0.2
   dotted_border: ^2.0.0+3
+  file_picker: ^5.2.3
   flutter:
     sdk: flutter
   http: ^0.13.5
