--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   file_picker: ^5.2.3
   flutter:
     sdk: flutter
+  flutter_rating_bar: ^4.0.1
   http: ^0.13.5
   provider: ^6.0.4
   shared_preferences: ^2.0.15
