--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,9 @@ dependencies:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
   http: ^0.13.5
+  pay: ^1.0.11
   provider: ^6.0.4
   shared_preferences: ^2.0.15
-
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
@@ -58,6 +58,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/gpay.json
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
