--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
   http: ^0.13.5
+  intl: ^0.17.0
   pay: ^1.0.11
   provider: ^6.0.4
   shared_preferences: ^2.0.15
