--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   badges: ^2.0.3
   carousel_slider: ^4.1.1
+  charts_flutter_new: ^0.12.0
   cloudinary_public: ^0.20.0
   cupertino_icons: ^1.0.2
   dotted_border: ^2.0.0+3
